@@ -488,3 +488,25 @@ chomper_speed = 15
 [Level 13] ; Jaffar
 [Level 14] ; princess
 [Level 15] ; potions
+
+
+; The following customization options can be used for skills:
+; strikeprob = Probability of striking, from 0 to 255.
+; restrikeprob = Probability of re-striking after block, from 0 to 255.
+; blockprob = Probability of blocking, from 0 to 255.
+; impblockprob = Probability of improper blocking, from 0 to 255.
+; advprob = Probability of going into hit range, from 0 to 255.
+; refractimer = Refractory period after pain, in frames.
+; extrastrength = Extra hit points.
+[Skill 0]
+[Skill 1]
+[Skill 2]
+[Skill 3]
+[Skill 4]
+[Skill 5]
+[Skill 6]
+[Skill 7]
+[Skill 8]
+[Skill 9]
+[Skill 10] ; a in apoplexy
+[Skill 11] ; b in apoplexy
